# sok

./: .gitignore  .llmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Configure-ClaudeDesktopMCP.ps1  Convert-AcademicDeliverable.ps1  DMDE-TreeExpand.ps1  Export-SoftwareManifest.ps1  Get-AcademicStatus.ps1  Get-ClassDeadlineAggregator.ps1  Install-GitHubRelease.ps1  Invoke-UCHarvestAudit.ps1  LICENSE  Migrate-PlaintextMCPCreds.ps1  Monitor-CDriveDuringRecovery.ps1  README.md  Reformat-UCMSIS-Docx.ps1  Reformat-UCMSIS-Docx.py  Reformat-UCMSIS-Phase2-Dryrun.py  Register-AuditCadenceTasks.ps1  Rename-DownloadedPDFs.ps1  Restructure-FlattenedFiles.ps1  SCRIPTS_HIERARCHY.md  SME_SysAdmin_Toolsuite_v3.ps1  SME_SysAdmin_v4_Reconciliation.ps1  SOK-AnnualAudit.ps1  SOK-Archiver.ps1  SOK-Backup.ps1  SOK-BackupClaude.ps1  SOK-BackupRestructure.ps1  SOK-BareMetal_v5.3.ps1  SOK-Canvas.psm1  SOK-CleanNoise.ps1  SOK-Cleanup.ps1  SOK-CodeReview.ps1  SOK-Comparator.ps1  SOK-CompressSignal.ps1  SOK-DefenderOptimizer.ps1  SOK-DriveViability.ps1  (+42 more)
.claude/: CLAUDE.md  settings.local.json
Deprecated/: Backup-FilesAdvanced.ps1  Install-GitHubRelease_pre-checksum-hardening_20260422_1315.ps1  Install-GitHubRelease_pre-sok-path-v2-fix_20260420_112101.ps1  Invoke-BackupRestructure.ps1  Move-FilesRecursively.ps1  Move-OldUnreadToArchive.ps1  Remove-3PSecurity.ps1  Restore-FilesFromBackup.ps1  SOK-Archiver_pre-force-fix_20260417.ps1  SOK-Archiver_pre-high5-fix_20260421_0903.ps1  SOK-Archiver_pre-v4_20260325_041255.ps1  SOK-BackupClaude_pre-h8-fix_20260421_0502.ps1  SOK-BackupClaude_pre-high3-scan_20260421_1130.ps1  SOK-BackupClaude_pre-system-context-fix_20260417.ps1  SOK-BackupRestructure_pre-crit2-fix_20260421_0445.ps1  SOK-Backup_pre-MIR-spacecheck_20260405.ps1  SOK-Backup_pre-high1-consistency_20260421_1010.ps1  SOK-BareMetal.ps1  SOK-BareMetal_v5.1_Final.ps1  SOK-BareMetal_v5.2.ps1  SOK-BareMetal_v5.3_pre-h10-fix_20260421_0452.ps1  SOK-BareMetal_v5_QA.ps1  SOK-CleanNoise_pre-c4-fix_20260421_0448.ps1  SOK-CleanNoise_pre-sok-path-fix_20260420_111715.ps1  SOK-Cleanup_pre-h8-fix_20260421_0502.ps1  SOK-Cleanup_pre-v4_20260325_041255.ps1  SOK-CodeReview_pre-m14-fix_20260421_1040.ps1  SOK-Common.psm1.pre-cluster-a-high-fixes-batch2_20260421_151314  SOK-Common_20260405.psm1  SOK-Common_pre-h8-resolveuser_20260421_0500.psm1  SOK-Common_pre-writesoklog-ordering-fix_20260418.psm1  (+102 more)
Utilities/: Position-DesktopIcons.ps1  (+9 more)
custom-mcps/exa-mcp/: README.md  pyproject.toml  start-exa-mcp.ps1
custom-mcps/exa-mcp/exa_mcp_bridge/: __init__.py  __main__.py
custom-mcps/gamma-mcp/: README.md  pyproject.toml  start-gamma-mcp.ps1
custom-mcps/gamma-mcp/gamma_mcp_server/: __init__.py  __main__.py
custom-mcps/n8n-control-mcp/: README.md  pyproject.toml  start-n8n-control-mcp.ps1
custom-mcps/n8n-control-mcp/n8n_control_mcp_server/: __init__.py  __main__.py
custom-mcps/ollama-mcp/: README.md  pyproject.toml  start-ollama-mcp.ps1
custom-mcps/ollama-mcp/ollama_mcp_server/: __init__.py  __main__.py
custom-mcps/supabase-mcp/: README.md  pyproject.toml  start-supabase-mcp.ps1
custom-mcps/supabase-mcp/supabase_mcp_server/: __init__.py  __main__.py
custom-mcps/unstructured-mcp/: README.md  pyproject.toml  start-unstructured-mcp.ps1
custom-mcps/unstructured-mcp/unstructured_mcp_server/: __init__.py  __main__.py
(+128 files in other folders)
