[project]
name = "gamma-mcp-server"
version = "1.0.0"
description = "MCP server wrapping Gamma presentation generation API for KLEM/OS Layer 5 content pipeline"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
gamma-mcp-server = "gamma_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gamma_mcp_server"]
