[project]
name = "n8n-control-mcp-server"
version = "1.0.0"
description = "MCP server wrapping n8n REST API for KLEM/OS Layer 4 workflow control from Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
n8n-control-mcp-server = "n8n_control_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["n8n_control_mcp_server"]
