[project]
name = "ollama-mcp-server"
version = "1.0.0"
description = "MCP server wrapping local Ollama HTTP API for KLEM/OS Layer 3 local inference fallback"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
ollama-mcp-server = "ollama_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ollama_mcp_server"]
