[project]
name = "supabase-mcp-server"
version = "1.0.0"
description = "MCP server wrapping Supabase (PostgreSQL + pgvector) for KLEM/OS Layer 1 data access"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "supabase>=2.5.0",
    "anyio>=4.0.0",
]

[project.scripts]
supabase-mcp-server = "supabase_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supabase_mcp_server"]
