[project]
name = "unstructured-mcp-server"
version = "1.0.0"
description = "MCP server wrapping unstructured.io Python library for KLEM/OS Layer 2 document parsing"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "unstructured[all-docs]>=0.15.0",
    "anyio>=4.0.0",
]

[project.scripts]
unstructured-mcp-server = "unstructured_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unstructured_mcp_server"]
